apps/paperless/paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      enableServiceLinks: false
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.1.0
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: consume
              mountPath: /usr/src/paperless/consume
              subPath: consume
            - name: PAPERLESS_CONSUMER_POLLING_INTERVAL
              value: "10"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: consume
          nfs:
            server: 192.168.68.87
            path: /volume1/Paperless
